syntax = "proto3";

package pb;

option go_package="./pb";

service Raft {
    rpc consensus(stream RaftMessage) returns (stream RaftMessage);
}

//消息 类型枚举
/*

*/
enum MessageType {
    VOTE = 0;
    VOTE_RESP = 1;
    HEARTBEAT = 2;
    HEARTBEAT_RESP = 3;
    APPEND_ENTRY = 4;
    APPEND_ENTRY_RESP = 5;
}

message LogEntry {
    EntryType type = 1;
    uint64 term = 2;
    uint64 index = 3;
    bytes data = 4;
}
enum EntryType {
    NORMAL = 0;
    MEMBER_CHNAGE = 1;
}
/*
 raft 消息
  1. MessageType 消息类型
  2. term 任期
  3. from 发送方id
  4. to 接收方id
  5. lastLogIndex 最后一条日志的索引
  6. lastLogTerm 最后一条日志的任期号
  7. lastCommit  最后提交索引
  8. entry 日志条目
  9. success 成功与否
*/
message RaftMessage {
     MessageType type = 1;
     uint64 term = 2;
     uint64 from = 3;
     uint64 to = 4 ;
     uint64 lastLogIndex = 5;
     uint64 lastLogTerm = 6;
     uint64 lastCommit = 7;
     repeated LogEntry entry = 8;
     bool success = 9;
}